TODO:
* update libfdatetime
  - floating time support
* update libfvalue
  - floating time support
  - fixed point currency support
* complete libcerror update
  - nk2tools
* update msvscpp files
* in io_handle_read_items used set array value instead of append ?
* 2012 update
  - macosx/libnk2.pmproj

Optimizations:
* map (file offset and size) items and item values first read on demand ?
* pre allocate item array entries

library
* additional value type support functions
  - filetime
* what about multiple alias entries 0x6001 of a single item?
  - they are set in values table but identifier lookup will return first only
* local library support

Tools
* add signal handling
* nk2export
  - add export mode like pffexport
  - export alias files instead of item values
  - export to CSV/TSV, HTML, XML
* nk2info

Test:
* add autoconf/make test suite

Beta release
* have automated test suite
* remove deprecated functions in libnk2_legacy.[ch]
* remove deprecated definition in include/libnk2/mapi.h
* update man pages
* add documentation
* check inclusion of local libraries

Bindings:
* python
* .net
* java

20120826
* updated dependencies

20120522
* updated dependencies

20120102
* 2012 update
* added codepage windows 932 and 936 support

20111030
* updated configure.ac and m4 files
* updated common, libsystem, libfdatetime, libfvalue
* changes for libfvalue updates

20111007
* updated README
* updated libfdatetime
* updated msvscpp files for libfdatetime

20111006
* removed acinclude.m4

20111005
* updated configure.ac and m4 files
* code clean up

20111004
* updated configure.ac and m4 files
* updated README files
* updated spec file
* updated pc file

20111003
* updated configure.ac
* updated common, array type, libsystem, libuna, libbfio, libfdatetime, libfmapi, libfvalue
* code clean up

20110727
* updated manuals

20110717
* implemented an alternative solution for sizeof( size_t ) == 8 ?

20110706
* code clean up
* updated msvscpp files, added VSDebug