@@ -3,6 +3,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/common \
 	@LIBCSTRING_CPPFLAGS@ \
 	@LIBCERROR_CPPFLAGS@ \
+	@LIBCDATA_CPPFLAGS@ \
 	@LIBCLOCALE_CPPFLAGS@ \
 	@LIBCNOTIFY_CPPFLAGS@ \
 	@LIBCSPLIT_CPPFLAGS@ \
@@ -16,7 +17,6 @@ AM_CPPFLAGS = \
 	@LIBFWNT_CPPFLAGS@ \
 	@LIBFMAPI_CPPFLAGS@ \
 	@LIBCSYSTEM_CPPFLAGS@ \
-	@MEMWATCH_CPPFLAGS@ \
 	@LIBNK2_DLL_IMPORT@
 
 AM_LDFLAGS = @STATIC_LDFLAGS@
@@ -44,8 +44,7 @@ nk2export_LDADD = \
 	@LIBCLOCALE_LIBADD@ \
 	@LIBCERROR_LIBADD@ \
 	@LIBCSTRING_LIBADD@ \
-	@LIBINTL@ \
-	@MEMWATCH_LIBADD@
+	@LIBINTL@
 
 nk2info_SOURCES = \
 	info_handle.c info_handle.h \
@@ -66,8 +65,7 @@ nk2info_LDADD = \
 	@LIBCLOCALE_LIBADD@ \
 	@LIBCERROR_LIBADD@ \
 	@LIBCSTRING_LIBADD@ \
-	@LIBINTL@ \
-	@MEMWATCH_LIBADD@
+	@LIBINTL@
 
 MAINTAINERCLEANFILES = \
 	Makefile.in
