@@ -1,4 +1,6 @@
 TODO:
+* complete libfvalue update
+* libcdata update
 * update libfdatetime
   - floating time support
 * update libfvalue
